--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -21,14 +21,29 @@
             <button class="add-song" type="submit" value="Submit">Add Song</button>
             {{!-- Inputs --}}
             <label class="input-labels" for="title">Title name:</label><br>
+            {{!-- Alert Msg --}}
+            <div style="display: none" id="alert-title" class="alert alert-danger" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class="sr-only">Error:</span> <span class="msg"></span>
+            </div>
             <input type="text" id="title" class="create-inputs" name="titlename"
                 placeholder="Example: Catch Hell Blues"><br>
 
             <label for="artist">Artist name:</label><br>
+            {{!-- Alert Msg --}}
+            <div style="display: none" id="alert-artist" class="alert alert-danger" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class="sr-only">Error:</span> <span class="msg"></span>
+            </div>
             <input type="text" id="artist" class="create-inputs" name="artistname"
                 placeholder="Example: The White Stripes"><br><br>
 
             <label for="tempo">Tempo:</label><br>
+            {{!-- Alert Msg --}}
+            <div style="display: none" id="alert-tempo" class="alert alert-danger" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class="sr-only">Error:</span> <span class="msg"></span>
+            </div>
             <input type="text" id="tempo" class="create-inputs" name="temponame"
                 placeholder="(BPM between 60 and 200) Example: 96"><br>
 
